# takeout

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
src/takeout/: classifier.py  config.py  db.py  fix_logging.py  io.py  load.py  load_location_data.py  server.py  sql.py  test.py  types.py
templates/: search.html  viewer.html
tests/: 2025-02-04 some.jpg.supplemental-metadata.json  test_db.py  test_imagefile.py  test_load.py
